--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>My name is Md MD MIKAIL HOSSEN SOMRAT. I’m a certified YouTube SEO Expert & Website SEO Specialist with 5+ years of experience. I’ve ranked 1000+ videos and optimized dozens of websites for top Google & YouTube results.</p>
 
             <div class="btn-box">
-                <a href="seogurusomrat@gmail.com" class="btn">Hire Me Now ! <i class='bx bx-right-arrow-alt' ></i></a>
+                <a href="https://linktr.ee/mdmikailhossen" class="btn">Hire Me Now ! <i class='bx bx-right-arrow-alt' ></i></a>
                 <a href="img/resume.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
             </div>
 
@@ -442,5 +442,9 @@
     <!-- mixitup cdn js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
     <script src="script.js"></script>
+    <!-- WhatsApp Floating Button -->
+<a href="https://wa.me/8801704732174" class="whatsapp-float" target="_blank" title="Chat on WhatsApp">
+    <i class='bx bxl-whatsapp'></i>
+</a>
 </body>
 </html>
