--- a/index.html
+++ b/index.html
@@ -434,9 +434,16 @@
             <i class='bx bxs-chevrons-up' ></i>
         </span>
     </div>
-    <!-- WhatsApp Floating Button -->
+   <!-- WhatsApp Floating Button -->
 <a href="https://wa.me/8801704732174" class="whatsapp-float" target="_blank" title="Chat on WhatsApp">
     <i class='bx bxl-whatsapp'></i>
 </a>
+    <!-- scroll reveal  -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- Swiper JS -->
+     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <!-- mixitup cdn js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
