--- a/index.html
+++ b/index.html
@@ -5,31 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Md MIKAIL HOSSEN SOMRAT | Portfolio website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/favicon.png" type="image/png">
     <!-- boxicon css link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- Link Swiper's CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>  <!-- Font Awesome যুক্ত করার জন্য -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <div class="overlay"></div>
     <header>
-        <a href="#" class="logo"><span>Md </span>Mikail</a>
-        <ul class="navlist">
-            <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-        <div class="right-header">
-            <a href="https://m.me/100093295107667" class="btn">Let's chat <i class='bx bx-message-dots' ></i></a>
-            <div class="menu-icon">
-                <div class="bar"></div>
-            </div>
+    <a href="#" class="logo"><span>Md </span>Mikail</a>
+    <ul class="navlist">
+        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li class="dropdown">
+            <a href="#">All Seo-Services</a>
+            <ul class="dropdown-content">
+                <li><a href="youtube-seo.html">YouTube SEO Growth</a></li>
+                <li><a href="website-audit.html">Website Audit & Plan</a></li>
+                <li><a href="on-page.html">ON-Page SEO</a></li>
+                <li><a href="technical-seo.html">Technical SEO</a></li>
+                <li><a href="off-page.html">OFF-Page SEO</a></li>
+                <li><a href="backlinks.html">High Quality Backlinks</a></li>
+                <li><a href="gmb.html">GMB Top Ranking</a></li>
+                <li><a href="local-seo.html">Local SEO Ranking</a></li>
+                <li><a href="smm.html">Social Media Marketing</a></li>
+            </ul>
+        </li>
+        <li class="dropdown">
+            <a href="#">All seo-portfolio</a>
+            <ul class="dropdown-content">
+                <li><a href="youtube-seo-portfolio.html">YouTube SEO - Portfolio</a></li>
+                <li><a href="website-audit-portfolio.html">Website Audit-Portfolio</a></li>
+                <li><a href="on-page-portfolio.html">ON Page - SEO Portfolio</a></li>
+                <li><a href="technical-seo-portfolio.html">Technical - SEO Portfolio</a></li>
+                <li><a href="hq-backlinks-portfolio.html">HQ Backlinks - Portfolio</a></li>
+                <li><a href="local-gmb-portfolio.html">Local SEO/GMB Ranking</a></li>
+                <li><a href="social-media-portfolio.html">Social Media - Portfolio</a></li>              
+            </ul>
+        </li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+    <div class="right-header">
+        <a href="https://m.me/100093295107667" class="btn">Let's chat <i class='bx bx-message-dots'></i></a>
+        <div class="menu-icon">
+            <div class="bar"></div>
         </div>
-    </header>
+    </div>
+</header>
 
     <section class="home" id="home">
         <div class="hero-info">
@@ -164,7 +187,7 @@
                 </div>
                 <h3>YouTube SEO</h3>
                 <p>I will optimize your YouTube videos with keyword-rich titles, descriptions, tags, and custom thumbnails. I ensure 100% SEO score using vidIQ and TubeBuddy to help your videos rank higher and go viral.</p>
-                <a href="#" class="readMore">Read More</a>
+                <a href="youtube-seo.html" class="readMore">Read More</a>
             </div>
 
             <div class="servicesItem">
@@ -194,7 +217,7 @@
                 </div>
                 <h3>Graphic Design</h3>
                 <p>I design high-CTR YouTube thumbnails & branding visuals. From thumbnails to banners and social posts — I use Photoshop, Canva, and Figma to create clean, effective designs that increase clicks and brand recognition.</p>
-                <a href="#" class="readMore">Read More</a>
+                <a href="youtube-seo-portfolio.html" class="readMore">Read More</a>
             </div>
         </div>
 
@@ -244,7 +267,7 @@
                 <div class="portfolio-content">
                     <h3>YouTube Channel SEO</h3>
                     <p>I optimized 100+ client videos using vidIQ & TubeBuddy tools. Result: 95–100% SEO scores and 50K+ organic views within 7 days.</p>
-                    <a href="#" class="readMore">Explore More</a>
+                    <a href="youtube-seo-portfolio.html" class="readMore">Explore More</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="img/portfolio/2.jpg" alt="">
@@ -255,7 +278,7 @@
                 <div class="portfolio-content">
                     <h3>YouTube video SEO</h3>
                     <p>Ranked travel-related short videos with proper tags, description, and click-worthy thumbnails. Achieved 20K+ views in 72 hours.</p>
-                    <a href="#" class="readMore">Explore More</a>
+                    <a href="youtube-seo-portfolio.html" class="readMore">Explore More</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="img/portfolio/3.jpg" alt="">
@@ -267,7 +290,7 @@
                 <div class="portfolio-content">
                     <h3>SEO Strategy for Makeup & Beauty Channel</h3>
                     <p>Optimized video titles, descriptions, and thumbnails for a women's beauty channel. Achieved 50K+ views organically in 5 days using targeted keywords and CTR-based thumbnail design.</p>
-                    <a href="#" class="readMore">Explore More</a>
+                    <a href="youtube-seo-portfolio.html" class="readMore">Explore More</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="img/portfolio/4.jpg" alt="">
@@ -289,7 +312,7 @@
                 <div class="portfolio-content">
                     <h3>YouTube Thumbnail Design for Yoga Channel</h3>
                     <p>Created peaceful and clean thumbnail designs using Canva & Photoshop, perfectly matching the channel's calming theme. Boosted video click-through rate by 60% with bold text, serene colors, and posture-focused visuals.</p>
-                    <a href="#" class="readMore">Explore More</a>
+                    <a href="youtube-seo-portfolio.html" class="readMore">Explore More</a>
                 </div>
                 <div class="portfolio-img">
                     <img src="img/portfolio/6.jpg" alt="">
@@ -308,19 +331,18 @@
                     <h2 class="heading">Contact Me</h2>
                     <span>get in touch with me</span>
                 </div>
-                <form action="#">
-                    <div class="input-box">
-                        <input type="text" placeholder="First Name">
-                        <input type="text" placeholder="Last Name">
-                    </div>
-                    <input type="email" placeholder="Email">
-                    <input type="text" placeholder="Subject">
-                    <textarea name="#" id="" cols="30" rows="10">
-                    </textarea>
-                    <div class="formBtn">
-                        <button type="submit" class="btn">Send Message</button>
-                    </div>
-                </form>
+                <form action="https://formspree.io/f/mnnzpdbo" method="POST">
+    <div class="input-box">
+        <input type="text" name="FirstName" placeholder="First Name" required>
+        <input type="text" name="LastName" placeholder="Last Name" required>
+    </div>
+    <input type="email" name="Email" placeholder="Email" required>
+    <input type="text" name="Subject" placeholder="Subject" required>
+    <textarea name="Message" placeholder="Your Message" cols="30" rows="10" required></textarea>
+    <div class="formBtn">
+        <button type="submit" class="btn">Send Message</button>
+    </div>
+</form>
             </div>
             <div class="skills">
                 <div class="container">
@@ -435,10 +457,11 @@
             <i class='bx bxs-chevrons-up' ></i>
         </span>
     </div>
-   <!-- WhatsApp Floating Button -->
-<a href="https://wa.me/8801704732174" class="whatsapp-float" target="_blank" title="Chat on WhatsApp">
-    <i class='bx bxl-whatsapp'></i>
-</a>
+ <!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/8801704732174" target="_blank" 
+       style="position: fixed; bottom: 20px; right: 20px; background: #25d366; color: white; border-radius: 50%; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; text-decoration: none; box-shadow: 0 2px 5px rgba(0,0,0,0.3); z-index: 9999;">
+        <i class="fab fa-whatsapp" style="font-size: 30px;"></i>
+    </a>
     <!-- scroll reveal  -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Swiper JS -->
